# stm32f1-modbus-test

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  VCP.inf  flash-release.gdb  flash.gdb  function.ods
.cargo/: config.toml
.gitea/workflows/: build.yaml
.github/workflows/: build.yaml
src/: config.rs  data_storage.rs  lib.rs  main.rs  num_ext.rs  pwm_ctrl_ext.rs  timer_interface.rs
src/pwm/: mod.rs  native_channels.rs  pca9685_channels.rs  pwm_calc.rs  pwm_channel.rs  pwm_ctrl_ext.rs
src/support/: data_storage.rs  f32_ext.rs  map.rs  mod.rs  parallel_input_bus.rs  parallel_output_bus.rs  serial_interface.rs
test/: heaters.vi  read.py
