[package]
authors = ["ololoshka2871"]
edition = "2021"
readme = "README.md"
name = "stm32f1-modbus-test"
version = "0.1.1"
resolver = "2"
keywords = ["stm32", "modbus"]

[dependencies]
num = { version = "0.4", default-features = false }
libm = "0.2.5"
vcell = "0.1.3"
heapless = { version = "0.7" }
fugit-timer = "0.1.3"
byte = { version = "0.2" }

embedded-hal = { version = "0.2.4", features = ["unproven"] }
cortex-m = "0.7.3"
cortex-m-rt = "0.7"

panic-abort = "0.3"

stm32f1xx-hal = { version = "0.9.0", features =["rt"], optional = true }
stm32-device-signature = "0.3.3"

libremodbus-rs = { path = "libs/libremodbus-rs", default-features = false, features = ["rtu", "ascii", "holdings", "inputs"] }

cortex-m-rtic = { version = "1.1" }
systick-monotonic = "1.0.1"

[profile.dev.package."*"]
opt-level = "z"

[profile.dev]
opt-level = "z"
codegen-units = 1 # better optimizations
lto = false
panic = "abort"

[profile.release]
opt-level = "s"
codegen-units = 1 # better optimizations
debug = true      # добавлять отладочные символы. Не влияет на размер исполняемого кода, зато работает дебаг
panic = 'abort'
lto = true

[features]
default = [
  "stm32f103b",
]

stm32f103b = ["stm32f103"]
stm32f103 = ["stm32f1xx-hal/stm32f103", "stm32f1xx-hal/medium", "stm32-device-signature/stm32f1"]

[[bin]]
name = "ext-quartz-8mhz"

[[bin]]
name = "int-resonator"